tests/baselines/reference/arrowFunctionsMissingTokens.errors.txt
==== tests/cases/compiler/arrowFunctionsMissingTokens.ts (24 errors) ====
    
    module missingArrowsWithCurly {
        var a = () { };
                   ~
!!! error TS1005: '=>' expected.
    
        var b = (): void { }
                         ~
!!! error TS1005: '=>' expected.
    
        var c = (x) { };
                    ~
!!! error TS1005: '=>' expected.
    
        var d = (x: number, y: string) { };
                                       ~
!!! error TS1005: '=>' expected.
    
        var e = (x: number, y: string): void { };
                                             ~
!!! error TS1005: '=>' expected.
    }
    
    module missingCurliesWithArrow {
        module withStatement {
            var a = () => var k = 10;};
                          ~~~
!!! error TS1005: '{' expected.
    
            var b = (): void => var k = 10;}
                                ~~~
!!! error TS1005: '{' expected.
    
            var c = (x) => var k = 10;};
                           ~~~
!!! error TS1005: '{' expected.
    
            var d = (x: number, y: string) => var k = 10;};
                                              ~~~
!!! error TS1005: '{' expected.
    
            var e = (x: number, y: string): void => var k = 10;};
                                                    ~~~
!!! error TS1005: '{' expected.
    
            var f = () => var k = 10;}
                          ~~~
!!! error TS1005: '{' expected.
        }
    
        module withoutStatement {
            var a = () => };
                          ~
!!! error TS1109: Expression expected.
    
            var b = (): void => }
                                ~
!!! error TS1109: Expression expected.
    
            var c = (x) => };
                           ~
!!! error TS1109: Expression expected.
    
            var d = (x: number, y: string) => };
                                              ~
!!! error TS1109: Expression expected.
    
            var e = (x: number, y: string): void => };
                                                    ~
!!! error TS1109: Expression expected.
    
            var f = () => }
                          ~
!!! error TS1109: Expression expected.
        }
        ~
!!! error TS1128: Declaration or statement expected.
    }
    ~
!!! error TS1128: Declaration or statement expected.
    
    module ce_nEst_pas_une_arrow_function {
        var a = ();
                 ~
!!! error TS1109: Expression expected.
    
        var b = (): void;
                        ~
!!! error TS1005: '=>' expected.
    
        var c = (x);
                 ~
!!! error TS2304: Cannot find name 'x'.
    
        var d = (x: number, y: string);
                                      ~
!!! error TS1005: '=>' expected.
    
        var e = (x: number, y: string): void;
                                            ~
!!! error TS1005: '=>' expected.
    }
    
    module okay {
        var a = () => { };
    
        var b = (): void => { }
    
        var c = (x) => { };
    
        var d = (x: number, y: string) => { };
    
        var e = (x: number, y: string): void => { };
    }